# mcp-kg-skills

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  dev.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: starter_data.py
src/mcp_kg_skills/: __init__.py  config.py  exceptions.py  models.py  server.py
src/mcp_kg_skills/database/: __init__.py  abstract.py  neo4j.py  sqlite.py
src/mcp_kg_skills/execution/: __init__.py  dependency.py  runner.py
src/mcp_kg_skills/security/: __init__.py  secrets.py
src/mcp_kg_skills/tools/: __init__.py  env.py  execute.py  nodes.py  query.py  relationships.py
src/mcp_kg_skills/utils/: __init__.py  env_file.py  requires_parser.py  script_cleaner.py
tests/: __init__.py  conftest.py
tests/integration/: test_database.py  test_end_to_end.py
tests/unit/: test_dependency_parser.py  test_requires_parser.py  test_script_cleaner.py  test_security.py
